--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,17 @@
     width: 95%;
     padding: 10px;
   }
+  .nav-links {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .nav-item {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+  .hamburger {
+    display: flex;
+  }
 }
 
 /* For tablets */
@@ -17,6 +28,9 @@
   .container {
     width: 90%;
     padding: 15px;
+  }
+  .hamburger {
+    display: none;
   }
 }
 
@@ -29,6 +43,9 @@
     width: 80%;
     max-width: 1200px;
     padding: 20px;
+  }
+  .hamburger {
+    display: none;
   }
 }
 
